hphp/hack/test/typecheck/constraints/constraint_override_bad2.php.like_types.exp
File "constraint_override_bad2.php", line 10, characters 9-11:
You are trying to access the member bar but this is not an object, it is a dynamic value or an object of type C (Typing[4062])
File "constraint_override_bad2.php", line 8, characters 20-20:
Definition is here
File "constraint_override_bad2.php", line 19, characters 7-7:
Class C does not correctly implement all required members  (Typing[4110])
File "constraint_override_bad2.php", line 19, characters 17-17:
Some members are incompatible with those declared in type B
Read the following to see why:
File "constraint_override_bad2.php", line 20, characters 19-21:
Member foo has the wrong type
File "constraint_override_bad2.php", line 20, characters 28-28:
Some type constraint(s) are violated here
File "constraint_override_bad2.php", line 20, characters 23-23:
T is a constrained type parameter
File "constraint_override_bad2.php", line 20, characters 28-28:
Expected ~C
File "constraint_override_bad2.php", line 20, characters 23-23:
But got T
